--- a/package.json
+++ b/package.json
@@ -14,12 +14,21 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
     "next": "15.4.5",
     "react": "19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "resend": "^6.0.1"
+    "react-tsparticles": "^2.12.2",
+    "resend": "^6.0.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
